[package]
name = "cmdopts"
version = "0.1.0"
authors = ["Piotr Stolarz"]
edition = "2021"
description = "GNU-like command line options parser."
documentation = "https://docs.rs/cmdopts"
readme = "README.md"
repository = "https://github.com/pstolarz/cmdopts"
license = "BSD-2-Clause"
keywords = ["cli", "parser", "command-line"]
exclude = ["target", "Cargo.lock"]
categories = ["command-line-interface", "command-line-utilities"]
